[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
sycamore = { git = "https://github.com/sycamore-rs/sycamore"}
wasm-bindgen= { version = "0.2", features = ["serde"] }
rand = {version = "0.8"}
getrandom = {version="0.2", features=["js"]}
log = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'MouseEvent',
  'Event',
]